[3.9] Allow to inject ResourceInfo into custom HTTP Security Policy